<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    tools:context=".HomeActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:id="@+id/android_course_img_id"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/android_course_image"
            android:scaleType="fitXY"
            android:src="@drawable/android_course_img" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/android_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/android_course_button"
            app:cornerRadius="12dp" />


        <ImageView
            android:id="@+id/ios_course_img_id"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/ios_course_content_description"
            android:scaleType="fitXY"
            android:src="@drawable/ios_course_img" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ios_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/ios_course"
            app:cornerRadius="12dp" />


        <ImageView
            android:id="@+id/fullStack_img_id"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/full_stack_course_content_description"
            android:scaleType="fitXY"
            android:src="@drawable/fullstack_course_img" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fullStack_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/fullstack_course"
            app:cornerRadius="12dp" />


    </LinearLayout>

</ScrollView><!--<androidx.constraintlayout.widget.ConstraintLayout-->
    <!--android:id="@+id/main"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".HomeActivity">-->

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->